[package]
name = "twt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.57"
base64 = "0.13.0"
futures = "0.3"
http-client = "6.5.3"
http-types = "2.12"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.5"
tiny_http = "0.11"
url = "2.2.2"
xdg = "2.4"
