[package]
name = "twt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.13.0"
clap = { version = "4", features = ["cargo"] }
http = "0.2"
itertools = "0.10"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.10.5"
ureq = "2.5"
url = "2.2.2"
xdg = "2.4"

[dev-dependencies]
expect = { path = "../expect" }
